--- a/.github/workflows/sync-iflows.yml
+++ b/.github/workflows/sync-iflows.yml
@@ -30,10 +30,10 @@ jobs:
     container:
       image: engswee/flashpipe:2.x.x-lite
     env:
-      HOST_TMN: dummy.hana.ondemand.com
-      HOST_OAUTH: dummy.authentication.eu10.hana.ondemand.com
-      OAUTH_CLIENTID: ${{ secrets.DEV_CLIENT_ID }}
-      OAUTH_CLIENTSECRET: ${{ secrets.DEV_CLIENT_SECRET }}     
+      HOST_TMN: l201138-tmn.hci.ap1.hana.ondemand.com
+      HOST_OAUTH: oauthasservices-cu6dvt362a.ap1.hana.ondemand.com/oauth2/api/v1/token
+      OAUTH_CLIENTID: 232620ce-c376-3442-840e-ff1262e3a300
+      OAUTH_CLIENTSECRET: ot@Fmis    
     steps:
     - uses: actions/checkout@v2
     - name: 'Set GIT_SRC_DIR for sync_to_git_repository.sh'
