--- a/.github/workflows/sync-iflows.yml
+++ b/.github/workflows/sync-iflows.yml
@@ -32,8 +32,8 @@ jobs:
     env:
       HOST_TMN: l201138-tmn.hci.ap1.hana.ondemand.com
       HOST_OAUTH: oauthasservices-cu6dvt362a.ap1.hana.ondemand.com/oauth2/api/v1/token
-      OAUTH_CLIENTID: 232620ce-c376-3442-840e-ff1262e3a300
-      OAUTH_CLIENTSECRET: ot@Fmis     
+      OAUTH_CLIENTID: ${{ secrets.DEV_CLIENT_ID }}
+      OAUTH_CLIENTSECRET: ${{ secrets.DEV_CLIENT_SECRET }}
     steps:
     - uses: actions/checkout@v2
     - name: 'Set GIT_SRC_DIR for sync_to_git_repository.sh'
