--- a/.github/workflows/sync-iflows.yml
+++ b/.github/workflows/sync-iflows.yml
@@ -31,7 +31,8 @@ jobs:
       image: engswee/flashpipe:2.x.x-lite
     env:
       HOST_TMN: l201138-tmn.hci.ap1.hana.ondemand.com
-      HOST_OAUTH: oauthasservices-cu6dvt362a.ap1.hana.ondemand.com/oauth2/api/v1/token
+      HOST_OAUTH: oauthasservices-cu6dvt362a.ap1.hana.ondemand.com
+      HOST_OAUTH_PATH: oauth2/api/v1/token
       OAUTH_CLIENTID: ${{ secrets.DEV_CLIENT_ID }}
       OAUTH_CLIENTSECRET: ${{ secrets.DEV_CLIENT_SECRET }}
     steps:
